first attempt at export with dictionary
Signed-off-by: Doron Chen <cdoron@il.ibm.com>